--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "^2.1.1"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
